hu.bme.mit.theta.core/src/gen/java/hu/bme/mit/theta/core/dsl/gen/CoreDslParser.java
// Generated from CoreDsl.g4 by ANTLR 4.5.3
package hu.bme.mit.theta.core.dsl.gen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CoreDslParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		BOOLTYPE=1, INTTYPE=2, RATTYPE=3, IF=4, THEN=5, ELSE=6, IFF=7, IMPLY=8, 
		FORALL=9, EXISTS=10, OR=11, AND=12, NOT=13, EQ=14, NEQ=15, LT=16, LEQ=17, 
		GT=18, GEQ=19, PLUS=20, MINUS=21, MUL=22, DIV=23, MOD=24, REM=25, PERCENT=26, 
		PRIME=27, TRUE=28, FALSE=29, ASSIGN=30, HAVOC=31, ASSUME=32, INT=33, NAT=34, 
		SIGN=35, DOT=36, ID=37, UNDERSCORE=38, DIGIT=39, LETTER=40, LPAREN=41, 
		RPAREN=42, LBRACK=43, RBRACK=44, LBRAC=45, RBRAC=46, COMMA=47, COLON=48, 
		SEMICOLON=49, QUOT=50, LARROW=51, RARROW=52, WS=53, COMMENT=54, LINE_COMMENT=55;
	public static final int
		RULE_decl = 0, RULE_declList = 1, RULE_type = 2, RULE_typeList = 3, RULE_boolType = 4, 
		RULE_intType = 5, RULE_ratType = 6, RULE_funcType = 7, RULE_arrayType = 8, 
		RULE_expr = 9, RULE_exprList = 10, RULE_funcLitExpr = 11, RULE_iteExpr = 12, 
		RULE_iffExpr = 13, RULE_implyExpr = 14, RULE_quantifiedExpr = 15, RULE_forallExpr = 16, 
		RULE_existsExpr = 17, RULE_orExpr = 18, RULE_andExpr = 19, RULE_notExpr = 20, 
		RULE_equalityExpr = 21, RULE_relationExpr = 22, RULE_additiveExpr = 23, 
		RULE_multiplicativeExpr = 24, RULE_negExpr = 25, RULE_accessorExpr = 26, 
		RULE_access = 27, RULE_funcAccess = 28, RULE_arrayAccess = 29, RULE_primeAccess = 30, 
		RULE_primaryExpr = 31, RULE_trueExpr = 32, RULE_falseExpr = 33, RULE_intLitExpr = 34, 
		RULE_ratLitExpr = 35, RULE_idExpr = 36, RULE_parenExpr = 37, RULE_stmt = 38, 
		RULE_stmtList = 39, RULE_assignStmt = 40, RULE_havocStmt = 41, RULE_assumeStmt = 42;
	public static final String[] ruleNames = {
		"decl", "declList", "type", "typeList", "boolType", "intType", "ratType", 
		"funcType", "arrayType", "expr", "exprList", "funcLitExpr", "iteExpr", 
		"iffExpr", "implyExpr", "quantifiedExpr", "forallExpr", "existsExpr", 
		"orExpr", "andExpr", "notExpr", "equalityExpr", "relationExpr", "additiveExpr", 
		"multiplicativeExpr", "negExpr", "accessorExpr", "access", "funcAccess", 
		"arrayAccess", "primeAccess", "primaryExpr", "trueExpr", "falseExpr", 
		"intLitExpr", "ratLitExpr", "idExpr", "parenExpr", "stmt", "stmtList", 
		"assignStmt", "havocStmt", "assumeStmt"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'bool'", "'int'", "'rat'", "'if'", "'then'", "'else'", "'iff'", 
		"'imply'", "'forall'", "'exists'", "'or'", "'and'", "'not'", "'='", "'/='", 
		"'<'", "'<='", "'>'", "'>='", "'+'", "'-'", "'*'", "'/'", "'mod'", "'rem'", 
		"'%'", null, "'true'", "'false'", "':='", "'havoc'", "'assume'", null, 
		null, null, "'.'", null, "'_'", null, null, "'('", "')'", "'['", "']'", 
		"'{'", "'}'", "','", "':'", "';'", null, "'<-'", "'->'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "BOOLTYPE", "INTTYPE", "RATTYPE", "IF", "THEN", "ELSE", "IFF", "IMPLY", 
		"FORALL", "EXISTS", "OR", "AND", "NOT", "EQ", "NEQ", "LT", "LEQ", "GT", 
		"GEQ", "PLUS", "MINUS", "MUL", "DIV", "MOD", "REM", "PERCENT", "PRIME", 
		"TRUE", "FALSE", "ASSIGN", "HAVOC", "ASSUME", "INT", "NAT", "SIGN", "DOT", 
		"ID", "UNDERSCORE", "DIGIT", "LETTER", "LPAREN", "RPAREN", "LBRACK", "RBRACK", 
		"LBRAC", "RBRAC", "COMMA", "COLON", "SEMICOLON", "QUOT", "LARROW", "RARROW", 
		"WS", "COMMENT", "LINE_COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "CoreDsl.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CoreDslParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class DeclContext extends ParserRuleContext {
		public Token name;
		public TypeContext ttype;
		public TerminalNode COLON() { return getToken(CoreDslParser.COLON, 0); }
		public TerminalNode ID() { return getToken(CoreDslParser.ID, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public DeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoreDslListener ) ((CoreDslListener)listener).enterDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoreDslListener ) ((CoreDslListener)listener).exitDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoreDslVisitor ) return ((CoreDslVisitor<? extends T>)visitor).visitDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclContext decl() throws RecognitionException {
		DeclContext _localctx = new DeclContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_decl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			((DeclContext)_localctx).name = match(ID);
			setState(87);
			match(COLON);
			setState(88);
			((DeclContext)_localctx).ttype = type();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclListContext extends ParserRuleContext {
		public DeclContext decl;
		public List<DeclContext> decls = new ArrayList<DeclContext>();
		public List<DeclContext> decl() {
			return getRuleContexts(DeclContext.class);
		}
		public DeclContext decl(int i) {
			return getRuleContext(DeclContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(CoreDslParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(CoreDslParser.COMMA, i);
		}
		public DeclListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoreDslListener ) ((CoreDslListener)listener).enterDeclList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoreDslListener ) ((CoreDslListener)listener).exitDeclList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoreDslVisitor ) return ((CoreDslVisitor<? extends T>)visitor).visitDeclList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclListContext declList() throws RecognitionException {
		DeclListContext _localctx = new DeclListContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(90);
			((DeclListContext)_localctx).decl = decl();
			((DeclListContext)_localctx).decls.add(((DeclListContext)_localctx).decl);
			}
			setState(95);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(91);
				match(COMMA);
				setState(92);
				((DeclListContext)_localctx).decl = decl();
				((DeclListContext)_localctx).decls.add(((DeclListContext)_localctx).decl);
				}
				}
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public BoolTypeContext boolType() {
			return getRuleContext(BoolTypeContext.class,0);
		}
		public IntTypeContext intType() {
			return getRuleContext(IntTypeContext.class,0);
		}
		public RatTypeContext ratType() {
			return getRuleContext(RatTypeContext.class,0);
		}
		public FuncTypeContext funcType() {
			return getRuleContext(FuncTypeContext.class,0);
		}
		public ArrayTypeContext arrayType() {
			return getRuleContext(ArrayTypeContext.class,0);
		}
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoreDslListener ) ((CoreDslListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoreDslListener ) ((CoreDslListener)listener).exitType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoreDslVisitor ) return ((CoreDslVisitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_type);
		try {
			setState(103);
			switch (_input.LA(1)) {
			case BOOLTYPE:
				enterOuterAlt(_localctx, 1);
				{
				setState(98);
				boolType();
				}
				break;
			case INTTYPE:
				enterOuterAlt(_localctx, 2);
				{
				setState(99);
				intType();
				}
				break;
			case RATTYPE:
				enterOuterAlt(_localctx, 3);
				{
				setState(100);
				ratType();
				}
				break;
			case LPAREN:
				enterOuterAlt(_localctx, 4);
				{
				setState(101);
				funcType();
				}
				break;
			case LBRACK:
				enterOuterAlt(_localctx, 5);
				{
				setState(102);
				arrayType();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeListContext extends ParserRuleContext {
		public TypeContext type;
		public List<TypeContext> types = new ArrayList<TypeContext>();
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(CoreDslParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(CoreDslParser.COMMA, i);
		}
		public TypeListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoreDslListener ) ((CoreDslListener)listener).enterTypeList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoreDslListener ) ((CoreDslListener)listener).exitTypeList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoreDslVisitor ) return ((CoreDslVisitor<? extends T>)visitor).visitTypeList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeListContext typeList() throws RecognitionException {
		TypeListContext _localctx = new TypeListContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_typeList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(105);
			((TypeListContext)_localctx).type = type();
			((TypeListContext)_localctx).types.add(((TypeListContext)_localctx).type);
			}
			setState(110);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(106);
				match(COMMA);
				setState(107);
				((TypeListContext)_localctx).type = type();
				((TypeListContext)_localctx).types.add(((TypeListContext)_localctx).type);
				}
				}
				setState(112);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BoolTypeContext extends ParserRuleContext {
		public TerminalNode BOOLTYPE() { return getToken(CoreDslParser.BOOLTYPE, 0); }
		public BoolTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_boolType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoreDslListener ) ((CoreDslListener)listener).enterBoolType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoreDslListener ) ((CoreDslListener)listener).exitBoolType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoreDslVisitor ) return ((CoreDslVisitor<? extends T>)visitor).visitBoolType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BoolTypeContext boolType() throws RecognitionException {
		BoolTypeContext _localctx = new BoolTypeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_boolType);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			match(BOOLTYPE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IntTypeContext extends ParserRuleContext {
		public TerminalNode INTTYPE() { return getToken(CoreDslParser.INTTYPE, 0); }
		public IntTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_intType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoreDslListener ) ((CoreDslListener)listener).enterIntType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoreDslListener ) ((CoreDslListener)listener).exitIntType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoreDslVisitor ) return ((CoreDslVisitor<? extends T>)visitor).visitIntType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IntTypeContext intType() throws RecognitionException {
		IntTypeContext _localctx = new IntTypeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_intType);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			match(INTTYPE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RatTypeContext extends ParserRuleContext {
		public TerminalNode RATTYPE() { return getToken(CoreDslParser.RATTYPE, 0); }
		public RatTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ratType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoreDslListener ) ((CoreDslListener)listener).enterRatType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoreDslListener ) ((CoreDslListener)listener).exitRatType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoreDslVisitor ) return ((CoreDslVisitor<? extends T>)visitor).visitRatType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RatTypeContext ratType() throws RecognitionException {
		RatTypeContext _localctx = new RatTypeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_ratType);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(RATTYPE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncTypeContext extends ParserRuleContext {
		public TypeListContext paramTypes;
		public TypeContext returnType;
		public TerminalNode LPAREN() { return getToken(CoreDslParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(CoreDslParser.RPAREN, 0); }
		public TerminalNode RARROW() { return getToken(CoreDslParser.RARROW, 0); }
		public TypeListContext typeList() {
			return getRuleContext(TypeListContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public FuncTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoreDslListener ) ((CoreDslListener)listener).enterFuncType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoreDslListener ) ((CoreDslListener)listener).exitFuncType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoreDslVisitor ) return ((CoreDslVisitor<? extends T>)visitor).visitFuncType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncTypeContext funcType() throws RecognitionException {
		FuncTypeContext _localctx = new FuncTypeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_funcType);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			match(LPAREN);
			setState(120);
			((FuncTypeContext)_localctx).paramTypes = typeList();
			setState(121);
			match(RPAREN);
			setState(122);
			match(RARROW);
			setState(123);
			((FuncTypeContext)_localctx).returnType = type();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArrayTypeContext extends ParserRuleContext {
		public TypeListContext indexTypes;
		public TypeContext elemType;
		public TerminalNode LBRACK() { return getToken(CoreDslParser.LBRACK, 0); }
		public TerminalNode RBRACK() { return getToken(CoreDslParser.RBRACK, 0); }
		public TerminalNode RARROW() { return getToken(CoreDslParser.RARROW, 0); }
		public TypeListContext typeList() {
			return getRuleContext(TypeListContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public ArrayTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arrayType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoreDslListener ) ((CoreDslListener)listener).enterArrayType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoreDslListener ) ((CoreDslListener)listener).exitArrayType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoreDslVisitor ) return ((CoreDslVisitor<? extends T>)visitor).visitArrayType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArrayTypeContext arrayType() throws RecognitionException {
		ArrayTypeContext _localctx = new ArrayTypeContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_arrayType);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			match(LBRACK);
			setState(126);
			((ArrayTypeContext)_localctx).indexTypes = typeList();
			setState(127);
			match(RBRACK);
			setState(128);
			match(RARROW);
			setState(129);
			((ArrayTypeContext)_localctx).elemType = type();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public FuncLitExprContext funcLitExpr() {
			return getRuleContext(FuncLitExprContext.class,0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoreDslListener ) ((CoreDslListener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoreDslListener ) ((CoreDslListener)listener).exitExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoreDslVisitor ) return ((CoreDslVisitor<? extends T>)visitor).visitExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_expr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			funcLitExpr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprListContext extends ParserRuleContext {
		public ExprContext expr;
		public List<ExprContext> exprs = new ArrayList<ExprContext>();
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(CoreDslParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(CoreDslParser.COMMA, i);
		}
		public ExprListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exprList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoreDslListener ) ((CoreDslListener)listener).enterExprList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoreDslListener ) ((CoreDslListener)listener).exitExprList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoreDslVisitor ) return ((CoreDslVisitor<? extends T>)visitor).visitExprList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExprListContext exprList() throws RecognitionException {
		ExprListContext _localctx = new ExprListContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_exprList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(133);
			((ExprListContext)_localctx).expr = expr();
			((ExprListContext)_localctx).exprs.add(((ExprListContext)_localctx).expr);
			}
			setState(138);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(134);
				match(COMMA);
				setState(135);
				((ExprListContext)_localctx).expr = expr();
				((ExprListContext)_localctx).exprs.add(((ExprListContext)_localctx).expr);
				}
				}
				setState(140);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
